lab/lab7/y.output
Grammar

    0 $accept: EL $end

    1 EL: EL E
    2   | ε

    3 E: E '+' T
    4  | T

    5 T: T '*' F
    6  | F

    7 F: NUM


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 5
    '+' (43) 3
    error (256)
    NUM (258) 7


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    EL (7)
        on left: 1 2
        on right: 0 1
    E (8)
        on left: 3 4
        on right: 1 3
    T (9)
        on left: 5 6
        on right: 3 4 5
    F (10)
        on left: 7
        on right: 5 6


State 0

    0 $accept: • EL $end

    $default  reduce using rule 2 (EL)

    EL  go to state 1


State 1

    0 $accept: EL • $end
    1 EL: EL • E

    $end  shift, and go to state 2
    NUM   shift, and go to state 3

    E  go to state 4
    T  go to state 5
    F  go to state 6


State 2

    0 $accept: EL $end •

    $default  accept


State 3

    7 F: NUM •

    $default  reduce using rule 7 (F)


State 4

    1 EL: EL E •
    3 E: E • '+' T

    '+'  shift, and go to state 7

    $default  reduce using rule 1 (EL)


State 5

    4 E: T •
    5 T: T • '*' F

    '*'  shift, and go to state 8

    $default  reduce using rule 4 (E)


State 6

    6 T: F •

    $default  reduce using rule 6 (T)


State 7

    3 E: E '+' • T

    NUM  shift, and go to state 3

    T  go to state 9
    F  go to state 6


State 8

    5 T: T '*' • F

    NUM  shift, and go to state 3

    F  go to state 10


State 9

    3 E: E '+' T •
    5 T: T • '*' F

    '*'  shift, and go to state 8

    $default  reduce using rule 3 (E)


State 10

    5 T: T '*' F •

    $default  reduce using rule 5 (T)
